--- a/view/article/css3D_fr.html
+++ b/view/article/css3D_fr.html
@@ -1,4 +1,15 @@
-<div>
+<div class="scene">
+    <div class="cube animation">
+        <div class="cube-face face-front">FRONT</div>
+        <div class="cube-face face-right">RIGHT</div>
+        <div class="cube-face face-back">BACK</div>
+        <div class="cube-face face-left">LEFT</div>
+        <div class="cube-face face-top">TOP</div>
+        <div class="cube-face face-bottom">BOTTOM</div>
+    </div>
+</div>
+
+<div class="article">
     <p>Je vais vous présenter le travail de David DeSandro sur la création de volume en 3D avec CSS.</p>
     <p>Bien que la 3D existe depuis longtemps dans le web avec canvas, Three.js (anciennement WebGL) ou encore notre
         défunt
@@ -15,7 +26,7 @@
     <p>Sans plus attendre, voici le lien vers ce tutoriel, aussi intéressant qu'enrichissant, une fois maîtrisé vous
         donneras un panel de perspective pour votre site.</p>
     <div>
-        <a href="https://3dtransforms.desandro.com/">https://3dtransforms.desandro.com/</a>
+        <a href="https://3dtransforms.desandro.com/" target="_blank">https://3dtransforms.desandro.com/</a>
     </div>
     <p>Bon code.</p>
 </div>
