--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 * {
-    background-color: grey;
     box-sizing: content-box;
     margin: 0;
     font-family: sans-serif;
+    color: #343434;
 }
+
+/*--------------------------MENU-------------------------*/
 
 .header {
     padding: 2%;
     display: flex;
     justify-content: space-between;
-    /*z-index: 100;*/
-    /*position: fixed;*/
 }
 
 .menu {
@@ -19,9 +19,15 @@
 }
 
 .menu button {
-    padding: 10px;
-    width: 3.5rem;
+    padding: 5px;
+    margin: 5px;
+    width: 2.5rem;
     border: none;
+    border-radius: 0.4rem;
+}
+
+.menu button:active {
+    transform: scale(0.95);
 }
 
 .menu img {
@@ -29,35 +35,732 @@
 }
 
 .menu-burger img {
-    width: 3.5rem;
+    width: 2.2rem;
+    margin-top: 3px;
+
 }
 
-.menu-hidden {
-    display: block;
+#menu-hidden {
+    display: none;
     flex-direction: column;
     position: absolute;
+    width: 95%;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
+    transform: translate(-50%, 5%);
+    z-index: 100;
 }
-.menu-hidden a {
-    display: flex;
-padding-top: calc(100% /7 /2);
-padding-bottom: calc(100% /7 /2);
+
+#menu-hidden a {
+    padding-top: calc(100% / 7 / 2);
+    padding-bottom: calc(100% / 7 / 2);
     text-decoration: none;
-    font-size: xx-large;
+    font-size: 2rem;
     text-align: center;
+    font-weight: 900;
+    color: #ffffff;
     text-transform: uppercase;
+    background-color: #c6c6c6;
 }
 
-.menu-burger:hover .menu-hidden {
-    display: block;
+#menu-hidden a:active {
+    background-color: #a8a8a8;
+}
+
+.menu-top {
+    border-radius: 1rem 1rem 0 0;
+}
+
+.menu-bottum {
+    border-radius: 0 0 1rem 1rem;
+}
+
+.menu-admin {
+    border-radius: 1rem;
+    margin-top: 2%;
+}
+
+.menu-admin:active {
+    transform: scale(0.95);
+}
+
+.menu p {
+    font-size: 2.2rem;
+}
+
+.pseudo {
+    margin: 5px;
+    font-size: 1.6rem;
+    color: #000000;
+}
+
+.invalid-text,
+.valid-text {
+    text-align: center;
+    padding: 3%;
+    margin: 1% 5%;
+    border-radius: 0.5rem;
+}
+
+.valid-text {
+    border: 2px solid #5d9900;
+    background-color: rgba(125, 206, 0, 0.14);
+}
+
+.invalid-text {
+    border: 2px solid #990000;
+    background-color: rgba(206, 0, 0, 0.14);
+}
+
+/*--------------------------GLOBAL-------------------------*/
+
+.page {
+    width: 90%;
+    margin: 10% auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.page h1 {
+    margin: 10%;
+    text-align: center;
+}
+
+.page p {
+    margin: 5%;
+    padding: 2%;
+    text-align: center;
+}
+
+.page input, .page textarea, .page button {
+    margin: 3% 5%;
+    padding: 2.6%;
+    font-size: 1.3rem;
+    font-weight: bold;
+    resize: none;
+    border-radius: 0.4rem;
+    border: none;
+}
+
+.page button {
+    box-shadow: 0 0 5px 2px #c1c1c1;
+}
+
+.page button:active {
+    box-shadow: inset 0 0 5px 2px #c1c1c1;
+}
+
+.content {
+    padding: 2%;
+    margin: 5%;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border-radius: 0.5rem;
+}
+
+.content h2 {
+    text-align: left;
+    padding: 3% 5%;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+.content p {
+    text-align: justify;
+}
+
+.content a {
+    text-decoration: none;
+    color: black;
+}
+
+.trame {
+    background-color: rgba(130, 130, 130, 0.48);
+    width: 200%;
+    height: 200%;
+    position: fixed;
+    top: -20%;
+}
+
+.popup {
+    position: fixed;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%);
+    width: 60%;
+    padding: 5%;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 0.8rem;
+}
+
+.popup h1, .popup p {
+    padding: 5%;
+}
+
+.popup img {
+    height: auto;
+    width: 10rem;
+    margin: 5%;
+}
+
+.popup a {
+    margin: 5% 0;
+}
+
+.popup input, .popup textarea {
+    width: 100%;
+    margin: 2% auto;
+    border-radius: 0.4rem;
+    resize: none;
+}
+
+.popup-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.popup-button button {
+    margin: 2% 5%;
+    padding: 5%;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.3rem;
+    border-radius: 0.4rem;
+}
+
+.popup-button button:active {
+    transform: scale(0.85);
+}
+
+.popup-button img {
+    width: 2rem;
+}
+
+.forms-separate {
+    background: #ffffff;
+    height: 2px;
+    margin: 0 auto;
+    border-radius: 50%;
+    width: 60%;
+}
+
+.back {
+    border: none;
+    background-color: transparent;
+}
+
+.back:active {
+    transform: scale(0.85);
 }
 
 
+/*--------------------------REGISTRATION & LOGIN-------------------------*/
 
-.menu p{
-    font-size: xx-large;
+.login {
+    background-color: #f1f1f1;
+    border-radius: 1rem;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+}
+
+/*--------------------------HOME-------------------------*/
+
+.home {
+    background-color: transparent;
+    box-shadow: none;
+
+}
+
+.logo {
+    width: 100%;
+    margin: 10% 0;
+}
+
+.home-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5% 10%;
+    border-radius: 1.2rem;
+    box-shadow: 0 0 5px 2px #d5d5d5;
+}
+
+.home-menu h2 {
+    color: #ffffff;
+}
+
+.home-menu:active {
+    transform: scale(0.95);
+}
+
+.content:nth-child(2) .home-menu {
+    background: linear-gradient(305deg, rgba(90,161,235,1) 0%, rgba(158,239,255,1) 100%);
+}
+
+.content:nth-child(3) .home-menu {
+    background: linear-gradient(305deg, rgba(255,186,76,1) 0%, rgba(255,249,120,1) 100%);
+}
+
+.content:nth-child(4) .home-menu {
+    background: linear-gradient(305deg, rgba(112,166,0,1) 0%, rgba(212,245,149,1) 100%);
+}
+
+.home-menu img {
+    height: 25vw;
+}
+
+.home-menu p {
+    display: none;
+}
+
+/*--------------------------TUTORIAL-------------------------*/
+
+.fond-tutorial {
+    background: linear-gradient(305deg, rgba(112,166,0,1) 0%, rgba(212,245,149,1) 100%);
+}
+
+.article a {
+    padding: 23px;
+    text-decoration: underline;
+}
+
+.scene {
+    margin: 1rem 0;
+    perspective: 1000px;
+}
+
+.cube {
+    width: 150px;
+    height: 150px;
+    transform-style: preserve-3d;
+    margin: 0 auto;
+}
+
+.animation {
+    animation: moveCube 25s infinite ease-in-out;
+}
+
+@keyframes moveCube {
+    0% {
+        transform: rotateX( 0deg) rotateY( 0deg);
+    }
+    10% {
+        transform: rotateX( 0deg) rotateY( 0deg);
+    }
+    100% {
+        transform: rotateX(360deg) rotateY(360deg);
+    }
+}
+
+.cube-face {
+    position: absolute;
+    width: 146px;
+    height: 146px;
+    border: 2px solid black;
+    line-height: 146px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+}
+
+.face-front {
+    transform: rotateY( 0deg) translateZ(75px);
+    background: hsla( 0, 100%, 50%, 0.7);
+}
+
+.face-right {
+    transform: rotateY( 90deg) translateZ(75px);
+    background: hsla( 60, 100%, 50%, 0.7);
+}
+
+.face-back {
+    transform: rotateY(180deg) translateZ(75px);
+    background: hsla(120, 100%, 50%, 0.7);
+}
+
+.face-left {
+    transform: rotateY(-90deg) translateZ(75px);
+    background: hsla(180, 100%, 50%, 0.7);
+}
+
+.face-top {
+    transform: rotateX( 90deg) translateZ(75px);
+    background: hsla(240, 100%, 50%, 0.7);
+}
+
+.face-bottom {
+    transform: rotateX(-90deg) translateZ(75px);
+    background: hsla(300, 100%, 50%, 0.7);
+}
+
+.article ul {
+    list-style-type: circle;
+}
+
+pre {
+    background-color: #d4d4d4;
+    padding: 10px;
+    color: #000000;
+    border-radius: 0.5rem;
+    border-left: 1rem solid #e8e834;
+    width: 80%;
+    margin: 0 auto;
+    overflow: auto;
+}
+
+i {
+    color: #2d892e;
+}
+
+/*--------------------------REFERENCE-------------------------*/
+
+.fond-reference {
+    background: linear-gradient(305deg, rgba(90,161,235,1) 0%, rgba(158,239,255,1) 100%);
+}
+
+.reference:active {
+    transform: scale(0.95);
+}
+
+.reference img {
+    display: none;
+}
+
+.reference h2 {
+    margin: 5%;
+    color: #343434;
+}
+
+.reference p {
+    text-align: center;
+}
+
+/*--------------------------GALLERY-------------------------*/
+
+.fond-gallery {
+    background: linear-gradient(305deg, rgba(255,186,76,1) 0%, rgba(255,249,120,1) 100%);
+}
+
+.page-gallery {
+    box-shadow: none;
+}
+
+.gallery-content {
+    box-shadow: none;
+}
+
+.affiche-gallery {
+    display: flex;
+    justify-content: center;
+}
+
+.affiche-gallery img {
+    margin: 5% 2%;
+    width: 100%;
+    border-radius: 0.3rem;
+}
+
+.slide-inktober,
+.slide-affiche,
+.slide-siteweb{
+    display: none;
+}
+
+.affiche-gallery .slide-left,
+.affiche-gallery .slide-right {
     margin: 0;
+    padding: 0;
+    font-size: 2rem;
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+}
+
+.affiche-gallery .slide-left:active,
+.affiche-gallery .slide-right:active {
+    transform: scale(0.85);
+    box-shadow: none;
+}
+
+/*--------------------------ERROR 404-------------------------*/
+
+.contact {
+    background-color: #f1f1f1;
+    border-radius: 1rem;
+}
+
+/*--------------------------ERROR 404-------------------------*/
+
+.error h1 {
+    font-size: 10rem;
+}
+
+.error p {
+    text-align: center;
+}
+
+.error a {
+    text-decoration: underline;
+}
+
+.button-admin:active {
+    transform: scale(0.95);
+}
+
+/*--------------------------ADMIN SPACE-------------------------*/
+
+.admin {
+    background-color: #f1f1f1;
+    border-radius: 1rem;
+}
+
+.admin a {
+    padding: 5%;
+}
+
+/*--------------------------ADMIN FORM-------------------------*/
+
+.forms{
+    background-color: #f1f1f1;
+    border-radius: 1rem;
+}
+
+.none {
+    display: none;
+}
+
+.entete-forms {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border-radius: 0.3rem;
+    background-color: #dddcdc;
+    font-weight: bold;
+}
+
+.entete-forms p {
+    text-transform: uppercase;
+    margin: 3%;
+    padding: 0;
+}
+
+.boucle-forms {
+    display: flex;
+    flex-direction: column;
+    margin: 5% 0;
+    border-radius: 0.3rem;
+    background-color: #dddcdc;
+}
+
+.boucle-forms .info {
+    display: flex;
+    justify-content: space-around;
+    margin: 2%;
+    padding: 0;
+}
+
+.boucle-forms .info p {
+    padding: 0;
+    margin: 2%;
+}
+
+.boucle-forms .button-crud {
+    margin: 2%;
+    display: flex;
+    justify-content: center;
+}
+
+.boucle-forms .button-crud button {
+    width: 100%;
+    background-color: #fff;
+}
+
+.boucle-forms .button-crud img {
+    margin-top: 3%;
+    height: 2rem;
+}
+
+.button-crud a {
+    display: none;
+}
+
+
+.forms-read {
+    align-items: center;
+}
+
+.forms-read div {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+}
+
+.forms-read button {
+    padding: 2% 5%;
+}
+
+.forms-read img {
+    padding-top: 4px;
+    width: 2rem;
+}
+
+.forms-read a {
+    padding: 5%;
+    width: 69%;
+    margin: 3%;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+
+}
+
+/*--------------------------ADMIN GALLERY-------------------------*/
+
+.admin-gallery {
+    background-color: #f1f1f1;
+    border-radius: 1rem;
+}
+
+.gallery {
+    align-items: center;
+}
+
+.gallery p {
+    font-size: 1.2rem;
+}
+
+.gallery select, .gallery option {
+    padding: 2% 5%;
+    font-size: 1.2rem;
+    width: 77%;
+}
+
+.gallery input {
+    margin-top: 6%;
+    width: 86%;
+}
+
+.gallery button {
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 80%;
+}
+
+.gallery-cadre {
+    overflow: auto;
+    display: flex;
+    border-radius: 0.5rem;
+}
+
+.gallery-crud {
+    padding: 5%;
+}
+
+.gallery-crud img {
+    height: 200px;
+    border-radius: 0.3rem;
+}
+
+.gallery-crud-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.gallery-crud-button button {
+    height: 3rem;
+}
+
+.gallery-crud-button img {
+    height: 1.8rem;
+    margin: 10px;
+}
+
+
+/*--------------------------ADMIN REFERENCE-------------------------*/
+
+.admin-reference {
+    background-color: #f1f1f1;
+    border-radius: 1rem;
+}
+
+.reference-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.reference-input p {
+    text-align: left;
+    margin: 0 5%;
+}
+
+.reference-input button {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.reference-input input, .reference-input textarea {
+    padding: 10px;
+    width: 80%;
+    margin: 0 auto;
+    background-color: #f1f1f1;
+}
+
+.table {
+    overflow: auto;
+}
+
+th {
+    border-radius: 0.2rem;
+    background-color: #bfbfbf;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 1px;
+}
+
+th, td {
+    text-align: center;
+    padding: 5px 10px;
+    width: auto;
+}
+
+tr:nth-child(even) {
+    background-color: #e8e8e8;
+}
+
+tr {
+    border-radius: 0.2rem;
+}
+
+.table-button button {
+    padding: 5px;
+    margin: 5px;
+    height: 2.7rem;
+}
+
+td img {
+    width: 2rem;
+    margin-top: 2%;
+    padding: 5px;
+}
+
+.table-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.reference-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 2%;
 }
