--- a/view/article/css3D_en.html
+++ b/view/article/css3D_en.html
@@ -10,16 +10,14 @@
 </div>
 
 <div class="article">
-    <p>I present you David DeSandro's work on 3D volume with CSS.</p>
+    <p>I present to you David DeSandro's work on 3D volume with CSS.</p>
     <p>3D exists since a long time in the web with canvas, Three.js (WebGL) or Flash.
         Since 2009, developers have 3D CSS transformation module.
         This is a revival for front-ends who until then were learning a third language to give some volume to their
         site.</p>
-    <p>This tutorial, proposes you the construction of a 3D volume, step by step.
-        The beginning is a simple perspective to an interactive 3D carousel.</p>
-    <p>Here is the link of the tutorial. Once mastered, it will give you a new perspective for your site.</p>
-
-    <a href="https://3dtransforms.desandro.com/">https://3dtransforms.desandro.com/</a>
-
-    <p>Good code.</p>
+    <p>This tutorial will introduce a step by step construction of a 3D volume.
+        The beginning is a simple representation of an interactive 3D carousel.</p>
+    <p>Here is the link for the tutorial.  Once mastered, it will give you a new perspective for your site.</p>
+    <a href="https://3dtransforms.desandro.com/" target="_blank">https://3dtransforms.desandro.com/</a>
+    <p>Good coding.</p>
 </div>
