--- a/view/article/css3D_fr.html
+++ b/view/article/css3D_fr.html
@@ -11,22 +11,17 @@
 
 <div class="article">
     <p>Je vais vous présenter le travail de David DeSandro sur la création de volume en 3D avec CSS.</p>
-    <p>Bien que la 3D existe depuis longtemps dans le web avec canvas, Three.js (anciennement WebGL) ou encore notre
-        défunt
-        Flash.
+    <p>Bien que la 3D existe depuis longtemps dans le web avec canvas, Three.js (WebGL) ou encore notre
+        défunt Flash.
         Depuis 2009, les développeurs peuvent profiter du module de transformation CSS 3D.
         Ce fut un soulagement pour les front-ends qui jusqu'à ce moment s'armaient de patience à la maîtrise d'un
-        langage
-        tiers pour donner ne serait ce qu'un peu de volume à leur site.</p>
+        langage tiers pour donner ne serait ce qu'un peu de volume à leur site.</p>
     <p>Ce tutoriel, vous propose le cheminement de construction d'un volume 3D, étapes par étapes.
         En commençant par une simple perspective d'une surface plane jusqu'à un carrousel 3D interactif.
         Ici pas de chipotage, il va à l'essentiel et pour les plus flemmards d'entre nous, un CodePen est fourni à
-        chaque
-        étape.</p>
+        chaque étape.</p>
     <p>Sans plus attendre, voici le lien vers ce tutoriel, aussi intéressant qu'enrichissant, une fois maîtrisé vous
         donneras un panel de perspective pour votre site.</p>
-    <div>
-        <a href="https://3dtransforms.desandro.com/" target="_blank">https://3dtransforms.desandro.com/</a>
-    </div>
+    <a href="https://3dtransforms.desandro.com/" target="_blank">https://3dtransforms.desandro.com/</a>
     <p>Bon code.</p>
 </div>
