--- a/view/article/gulp_en.html
+++ b/view/article/gulp_en.html
@@ -1,6 +1,6 @@
 <div class="article">
     <p>Gulp is a "Javascript task-runner", this toolkit automates repetitive tasks.
-        and speed up project development with plugins: front-end.</p>
+        and speeds up project development with plugins: front-end.</p>
 
     <p>Its tasks are different from each other :</p>
     <div>
@@ -14,7 +14,7 @@
         </ul>
     </div>
     <p>There are 4000 plugins at the moment. Which will save you production time.</p>
-    <p>I show you how to implement Gulp in your projects and an example.</p>
+    <p>I will show you how to implement Gulp in your projects and an example.</p>
 </div>
 
 <div>
@@ -36,15 +36,15 @@ npm install --global gulp-cli</pre>
     <pre>
 npm init</pre>
 
-    <p>Here enter information about your project: name, version, description, etc...
-        Don't worry, you will be able to modify this information later (in the package.json).</p>
+    <p>Here enter the informations about your project: name, version, description, etc...
+        Don't worry, you will be able to modify those informations later (in the package.json).</p>
 </div>
 
 <div>
-    <p>Then make the choice of plugins and their installation.
+    <p>Then choose the plugins to install.
         Here : <a href="https://gulpjs.com/plugins" target="_blank">https://gulpjs.com/plugins</a></p>
 
-    <p>Afterwards, install all the plugins via your terminal with :</p>
+    <p>Afterwards, install all the plugins via your terminal using :</p>
 
     <pre>
 npm install --save-dev</pre>
@@ -91,12 +91,12 @@ gulp.task('minifier', function() {          <i>// Task "minifier"</i>
 });</pre>
 
 
-    <p>To execute this task, open your terminal in your project :</p>
+    <p>To execute this task, open the terminal in your project :</p>
 
         <pre>
 gulp minifier</pre>
 
-    <p>When you have a lot of stains, you can create a lot of areas of development.</p>
+    <p>When you have a lot of tasks, you can create a lot of areas of development.</p>
 
     <p>For example:</p>
 
