--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ body {
 .valid-text {
     text-align: center;
     padding: 3%;
-    margin: 1% 5%;
+    margin: 3% 5%;
     border-radius: 0.5rem;
 }
 
@@ -346,6 +346,7 @@ body {
 .scene {
     margin: 1rem 0;
     perspective: 1000px;
+    z-index: 1;
 }
 
 .cube {
@@ -432,6 +433,10 @@ pre {
 
 i {
     color: #2d892e;
+}
+
+.article ul {
+    padding-left: 10%;
 }
 
 /*--------------------------REFERENCE-------------------------*/
@@ -667,7 +672,7 @@ i {
 }
 
 .gallery-crud img {
-    height: 200px;
+    height: 300px;
     border-radius: 0.3rem;
 }
 
